--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="overflow-hidden lg:h-screen">
-        <nav class="bg-stone-200 h-20  flex gap-5 items-center justify-between lg:text-lg lg:px-24">
+        <nav class="bg-white h-20  flex gap-5 items-center justify-between lg:text-lg lg:px-24">
             <div class="flex p-9 ">
                 <h1 class="text-purple-900 font-bold text-5xl m-4">Logo</h1>
                 <ul class="flex gap-4 justify-center items-center m-5 hidden lg:flex">
