--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <button class="text-white bg-purple-700 rounded-sm px-6 py-1">See our Services</button>
             </div>
 
-            <div class="w-135 mt-25 ">
+            <div class="w-110 mt-25 lg:flex ml-5">
                 <div class=" flex item-center justify-center W-1">
                     <img src="img.jpg" alt=""></div>
             </div>
