--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="overflow-hidden lg:h-screen">
         <nav class="bg-white h-20  flex gap-5 items-center justify-between lg:text-lg lg:px-24">
             <div class="flex p-9 ">
-                <h1 class="text-purple-900 font-bold text-5xl m-4">Logo</h1>
+                <h1 class="text-purple-900 font-bold text-3xl xl:text-5xl m-4">Logo</h1>
                 <ul class="flex gap-4 justify-center items-center m-5 hidden lg:flex">
                     <li class="text-black font-semibold">Home</li>
                     <li class="text-gray-400 hover:text-black font-semibold">About</li>
@@ -24,8 +24,8 @@
                     <li class="text-gray-400 hover:text-black font-semibold">Pricing</li>
                 </ul>
             </div>
-            <div class="m-4 flex justify-end "><button
-                    class="text-white bg-purple-800 font-semibold rounded-sm px-10 py-1">Contact us</button>
+            <div class=" flex justify-end "><button
+                    class="text-white bg-purple-800 font-semibold rounded-sm px-8 py-1 ">Contact us</button>
             </div>
 
 
@@ -34,7 +34,7 @@
 
         <DIV class="flex flex-col-reverse lg:flex-row lg:justify-around">
             <div class="w-120  p-20">
-                <h1 class="text-purple-900 font-bold text-5xl">We Help You <span class="text-purple-700">Crush</span>
+                <h1 class="text-purple-900 font-bold text-3xl xl:text-5xl">We Help You <span class="text-purple-700">Crush</span>
                     Your
                     competition</h1>
                 <br>
@@ -47,7 +47,7 @@
                 <button class="text-white bg-purple-700 rounded-sm px-6 py-1">See our Services</button>
             </div>
 
-            <div class="w-110 mt-25 lg:flex ml-5">
+            <div class="w-90 m-5  xl:w-170 xl:m-1 ">
                 <div class=" flex item-center justify-center W-1">
                     <img src="img.jpg" alt=""></div>
             </div>
